--- a/PoliticalCompass/MainWindow.xaml
+++ b/PoliticalCompass/MainWindow.xaml
@@ -63,6 +63,7 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
+        <Label Name="Label" Content="Label" HorizontalAlignment="Left" Margin="205,74,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
